# autoresearch-developability

./: .gitignore  README.md  program.md  pyproject.toml  results.tsv  run_all.sh
data/manifests/: manifest.json
docs/: PRD.md  dataset_notes.md  lay_summaries.md  manuscript_PRD.md  manuscript_review_PRD.md  manuscript_review_report.md  paper_outline.md  prompt3-summary.md
docs/manuscript_audit/: FIXES_APPLIED.md  SUMMARY.md  bib-verifier.md  citation-coherence.md  companion-paper-check.md  methodology-grounding.md  orphan-and-missing.md
docs/prompts/: prompt-1-kickoff.md  prompt-2-implement-harness.md  prompt-3-run-loop.md  prompt-4-paper-mode.md
manuscript/: AUDIT_REPORT.md  PLAIN_ENGLISH.md  main.tex  references.bib
manuscript/sections/: abstract.tex  conclusion.tex  discussion.tex  ethics.tex  introduction.tex  methodology.tex  related_work.tex  reproducibility.tex  results.tex  supplementary.tex
results/ablations/: bootstrap_val_k20.csv  endpoint_ablation_val.csv  multi_split_raw.csv  multi_split_summary.csv  qualitative_examples_val.csv
results/baseline/: results_baseline.tsv
results/loops/: phase3_manual_results.tsv  prompt3_prompt3b_results.tsv
results/loops/prompt5/: results.tsv  summary.json
scripts/: auto_commit.sh  plot_headline_comparison.py  plot_trajectory_annotated.py
src/: __init__.py  analysis.py  endpoint_activity.py  endpoint_dev.py  endpoint_stability.py  endpoint_toxicity.py  evaluate.py  features.py  prepare.py  rank.py  rank_learnable.py  run_agent_loop.py  session_tools.py
tests/: test_analysis.py  test_smoke.py
