[project]
name = "autoresearch-developability"
version = "0.1.0"
description = "Multi-objective autoresearch for peptide developability ranking"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "requests>=2.28",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "fair-esm>=2.0",
    "lightgbm>=4.0",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
]
all = [
    "torch>=2.0",
    "fair-esm>=2.0",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pytest>=7.0",
]
